put the wells in columns

--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
         <button class="btn btn-lg btn-danger">Danger Btn</button>
         <button class="btn btn-lg btn-success">Success Btn</button>
     </div>
-    <div class="well well-sm">
-        <p>Small well</p>
-    </div>
-    <div class="well well-lg">
-        <p>Large well</p>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="well well-sm">
+                <p>Small well</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="well">
+                <p>Regular well</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="well well-lg">
+                <p>Large well</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
