--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
