black box grid practice

--- a/index.html
+++ b/index.html
@@ -10,6 +10,54 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="row row-one">
+            <div class="col-md-2">
+                <div class="black sm"></div>
+            </div>
+            <div class="col-md-2 col-md-offset-4">
+                <div class="black row-1-xs"></div>
+            </div>
+            <div class="col-md-2">
+                <div class="black row-1-xs"></div>
+            </div>
+            <div class="col-md-2 ">
+                <div class="black row-1-xs"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="black xl"></div>
+            </div>
+        </div>
+        <div class="row row-3">
+            <div class="col-md-3">
+                <div class="black xs"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="black lg"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="black lg"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="black lg"></div>
+            </div>
+        </div>
+        <div class="row row-3">
+            <div class="col-md-6">
+                <div class="black lg"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="black lg"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="black lg"></div>
+            </div>
+        </div>
+    </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
