created gh pages branch

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-
+<!--gh pages practice-->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
